// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getTree calls github.gitdata.getTree 1`] = `
Array [
  Array [
    Object {
      "owner": "JasonEtco",
      "repo": "example",
      "tree_sha": 1,
    },
  ],
]
`;

exports[`getTree calls github.gitdata.getTree with a custom sha 1`] = `
Array [
  Array [
    Object {
      "owner": "JasonEtco",
      "repo": "example",
      "tree_sha": 123,
    },
  ],
]
`;

exports[`getTree calls github.gitdata.getTree with recursive 1`] = `
Array [
  Array [
    Object {
      "owner": "JasonEtco",
      "recursive": 1,
      "repo": "example",
      "tree_sha": 1,
    },
  ],
]
`;
